# blackscraper

./: .gitignore  Cargo.toml  blacklist.toml  code_metrics.yaml  config.toml
.claude/: settings.local.json
MAT313/www.math.stonybrook.edu/: style.css
alon/www2.cs.arizona.edu/: (document.location.protocol
ida_pro/python.docs.hex-rays.com/: annotated.html  classes.html  classida__auto_1_1auto__display__t-members.html  classida__auto_1_1auto__display__t.html  classida__bitrange_1_1bitrange__t-members.html  classida__bitrange_1_1bitrange__t.html  classida__bytes_1_1compiled__binpat__t-members.html  classida__bytes_1_1compiled__binpat__t.html  classida__bytes_1_1compiled__binpat__vec__t-members.html  classida__bytes_1_1compiled__binpat__vec__t.html  classida__bytes_1_1data__format__t-members.html  classida__bytes_1_1data__format__t.html  classida__bytes_1_1data__type__t-members.html  classida__bytes_1_1data__type__t.html  classida__bytes_1_1hidden__range__t-members.html  classida__bytes_1_1hidden__range__t.html  classida__bytes_1_1octet__generator__t-members.html  classida__bytes_1_1octet__generator__t.html  classida__dbg_1_1_d_b_g___hooks-members.html  classida__dbg_1_1_d_b_g___hooks.html  classida__dbg_1_1bpt__location__t-members.html  classida__dbg_1_1bpt__location__t.html  classida__dbg_1_1bpt__t-members.html  classida__dbg_1_1bpt__t.html  classida__dbg_1_1bpt__vec__t-members.html  classida__dbg_1_1bpt__vec__t.html  classida__dbg_1_1bptaddrs__t-members.html  classida__dbg_1_1bptaddrs__t.html  (+1380 more)
src/: blacklist.rs  config.rs  error.rs  main.rs  models.rs
(+866 files in other folders)
