[package]
name = "something_that_works"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.23"
scraper = "0.24"
tokio = { version = "1.45.0", features = ["full"] }
regex = "1.11.1"
num_cpus = "1.16.0"
url = "2.5.4"
html-escape = "0.2.13"
kuchiki = "0.8.1"
dashmap = "7.0.0-rc2"
toml = "0.9.5"
thiserror = "1.0.50"
log = "0.4.20"
env_logger = "0.10.1"
once_cell = "1.19.0"
serde = { version = "1.0.192", features = ["derive"] }
