[package]
name = "something_that_works"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.23"
scraper = "0.24"
tokio = { version = "1.47.1", features = ["full"] }
regex = "1.11.2"
num_cpus = "1.17.0"
kuchiki = "0.8.1"
dashmap = "7.0.0-rc2"
toml = "0.9.5"
thiserror = "2.0.16"
log = "0.4.27"
env_logger = "0.11.8"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
url = "2.5.7"
